--- a/src/scss/_lastinfo.scss
+++ b/src/scss/_lastinfo.scss
@@ -28,7 +28,7 @@
     margin: 0 0 23px 0;
 }
 
-/* 
+/* Hover button on image
 .moreinfo-btn {
     @include gen-bt-styles(white, 10px 22px 10px 17px, #1c1c1c);
     position: absolute;
@@ -120,7 +120,7 @@
     min-width: 180px;
     position: absolute;
     left: 32px;
-    bottom: 21px;
+    bottom: 20px;
 }
 
 %info-icons {
